--- a/Backend/Node/package.json
+++ b/Backend/Node/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "lodash": "^4.17.21",
+    "twilio": "^5.3.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
